themes/base_files/css/feature/adminui.scss
/* ... */
// Provide space for aside toggle button - small screens (default)
.tiki-admin.uab #tikifeedback,
.tiki-admin.uab .admin-content,
.tiki-admin.uab .bottom_modules {
    padding-left: 2.5rem !important;
}


// In larger screens, when UAB is active, prevent content from being covered by aside (offcanvas content); may need adjusting -- g_c-l
@media (min-width: 993px) and (max-width: 2000px /*1675px *//*1370px */) {
    .tiki-admin.uab #tikifeedback,
    .tiki-admin.uab .admin-content,
    .tiki-admin.uab .errors-wrapper,
    .tiki-admin.uab .bottom_modules {
        padding-left: 320px !important;
    }
}

//@media (min-width: 1440px) and (max-width: 1675px) {
//    .tiki-admin.uab #tikifeedback,
//    .tiki-admin.uab .admin-content,
//    .tiki-admin.uab .bottom_modules {
//        padding-left: 320px !important;
//    }
//}

// Provide space for aside toggle button in screens with full-width content
.tiki-admin.uab:not(.fixed_width) #tikifeedback,
.tiki-admin.uab:not(.fixed_width) .admin-content {
    padding-left: 2.5rem !important;
}

@media (min-width: 993px) {
    .tiki-admin.uab:not(.fixed_width) #tikifeedback,
    .tiki-admin.uab:not(.fixed_width) .admin-content,
    .tiki-admin.uab:not(.fixed_width) .bottom_modules {
        padding-left: 320px !important;
    }
}


.tiki-admin .admin-wrapper .navbar-toggler {
    position: absolute;
    background-color: rgba(255, 255, 255, .5);
    border: inherit;
//    left: 1rem;
}

.tiki-admin .container.container-std .col1 {
    padding-left: 0;
}
//.tiki-admin .offcanvas.offcanvas-start {
//    --bs-offcanvas-width: 300px; }
.tiki-admin .top_modules .box-login_box { margin-left: auto; }

@media (min-width: 992px) {
    .tiki-admin.uab aside.admin-nav .navbar-expand-lg .offcanvas  .offcanvas-body {
        flex-direction: column;
    }
}

.tiki-admin aside.admin-nav > nav {
    /*height: unset;
      width: unset !important;
     overflow-y: auto;
     overflow-x: hidden; */
    top: var(--tiki-admin-top-modules-height) !important; //50px !important;
}


// Color rules - To implement color-neutral CSS variable names, the selectors for the rules have to be repeated for 'light' and 'dark' options. The file size increase caused by this
// has been offset by removing rules not involving color where color classes were unnecessarily used repeatedly, one for light and one for dark.

// Top nav light ------------------------------------------ Fixed-top position, light (background) option
.tiki-admin header .tiki-top-nav-light,
//.tiki-admin .top_modules.navbar-light-parent, // These selectors don't seem to be necessary - g_c-l.
//.tiki-admin .navbar-light-parent .top_modules
{
    background: var(--tiki-admin-top-nav-bg);
    border: var(--tiki-admin-top-border); // Style and color, for example, solid black
    border-width: var(--tiki-admin-top-border-width); // For example, 1px, or 0px 0px 4px 0px
    box-shadow: var(--tiki-admin-top-box-shadow);
}

// Top links
.tiki-admin .tiki-admin-top-nav-light .nav-item .nav-link { // Scope widened to include accordion.
    color: var(--tiki-admin-top-nav-color);
    &:hover,
    &:focus {
        color: var(--tiki-admin-top-nav-hover-color);
    }
}

// Top and aside dropdowns
.tiki-admin .admin-navbar.tiki-admin-top-nav-light .dropdown-menu,
.tiki-admin .tiki-admin-top-nav-light .dropdown-menu,
.tiki-admin-aside-nav-light .dropdown-menu {
    color: var(--tiki-admin-dropdown-link-color);
    background-color: var(--tiki-admin-dropdown-bg);
    .dropdown-item:not(.active) {
        color: var(--tiki-admin-dropdown-link-color);
        &:focus,
        &:hover,
        & .active {
            color: var(--tiki-admin-dropdown-link-hover-color);
            background: var(--tiki-admin-dropdown-link-hover-bg);
        }
    }
}

// Top nav dark ------------------------------------------ Fixed-top position, dark (background) option
.tiki.tiki-admin .tiki-top-nav-dark,
//.tiki.tiki-admin .top_modules.navbar-dark-parent, // These selectors don't seem to be necessary - g_c-l.
//.tiki.tiki-admin .navbar-dark-parent .top_modules
{
    background: var(--tiki-admin-top-nav-bg);
    border: var(--tiki-admin-top-border); // Style and color, for example, solid black
    border-width: var(--tiki-admin-top-border-width); // For example, 1px, or 0px 0px 4px 0px
    box-shadow: var(--tiki-admin-top-box-shadow);
}

// Top links
.tiki-admin .tiki-admin-top-nav-dark .nav-item .nav-link { // Scope widened to include accordion.
    color: var(--tiki-admin-top-nav-color);
    &:hover,
    &:focus {
        color: var(--tiki-admin-top-nav-hover-color);
    }
}

// Top and aside dropdowns
.tiki-admin .admin-navbar.tiki-admin-top-nav-dark .dropdown-menu,
.tiki-admin .tiki-admin-top-nav-dark .dropdown-menu,
.tiki-admin-aside-nav-dark .dropdown-menu {
    color: var(--tiki-admin-dropdown-link-color);
    background-color: var(--tiki-admin-dropdown-bg);
    .dropdown-item:not(.active) {
        color: var(--tiki-admin-dropdown-link-color);
        &:focus,
        &:hover,
        & .active {
            color: var(--tiki-admin-dropdown-link-hover-color);
            background: var(--tiki-admin-dropdown-link-hover-bg);
        }
    }
}

// Aside nav light -------------------------------------------------------
.tiki-admin-aside-nav-light,
.tiki-admin aside.admin-nav .bg-light {
    background: var(--tiki-admin-aside-nav-bg) !important;
}

.tiki-admin-aside-nav-light .nav-link {
    color: var(--tiki-admin-aside-nav-color);
    &:focus,
    &:hover {
        color: var(--tiki-admin-aside-nav-hover-color);
        background: var(--tiki-admin-aside-nav-hover-bg);
    }
}
.tiki-admin-aside-nav-light .admin-menu-collapser {
    background-color: var(--tiki-admin-dropdown-bg);
    color: var(--tiki-admin-dropdown-link-color);
}

// Aside nav dark ---------------------------------------------------------
.tiki-admin-aside-nav-dark,
.tiki-admin aside.admin-nav .navbar-dark {
    background: var(--tiki-admin-aside-nav-bg) !important;
}
/* ... */

